--- a/front/src/app/components/template/header/header.component.html
+++ b/front/src/app/components/template/header/header.component.html
@@ -1,11 +1,58 @@
-<mat-toolbar color="primary" class="header" mat-elevation-z5>
-<span>
-    <a><img class="icone" src="../../../../assets/logo.8JhZGHQ.png"></a>
-</span>
-
-<span class="title">
-    <a>
-    Conexão Play Hard
-    </a>
-</span>
-</mat-toolbar>
+<mat-toolbar color='primary'>
+    <mat-toolbar-row class="header">
+        <span><img class="icon" src="../../../../assets/logo.8JhZGHQ.png"></span>
+        <span class="titulo">Conexão Play Hard</span>
+        <span class="spacer"></span>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <button  class="botoesDireita" mat-button> 1 </button>
+        <!-- <button  class="botoesDireita" mat-button> Forum </button>
+        <button  class="botoesDireita" mat-button> Uploader </button>
+        <button  class="botoesDireita" mat-button> facebook </button>
+        <button  class="botoesDireita" mat-button> yt </button>
+        <button  class="botoesDireita" mat-button> instagram </button>
+        <button class="botoesDireita" mat-button> twitter </button>
+        <button  class="botoesDireita" mat-button> twitch </button>
+        <button  class="botoesDireita" mat-button> twitch </button>
+        <button  class="botoesDireita" mat-button> discord </button> 
+        login
+        dentro do menu
+        loja
+        corporação
+        fação
+        --> 
+        
+        <button mat-icon-button [mat-menu-trigger-for]="menu" ><mat-icon>more_vert </mat-icon></button>
+        <mat-menu #menu="matMenu">
+            <button mat-menu-item>
+                <mat-icon>dialpad</mat-icon>
+                <span>teste 1</span>
+            </button>
+    
+            <button mat-menu-item>
+                <mat-icon>voicemail</mat-icon>
+                <span>teste 2</span>
+            </button>
+    
+            <button mat-menu-item>
+                <mat-icon>notifications_off</mat-icon>
+                <span>teste 3</span>
+            </button>
+        </mat-menu>
+    </mat-toolbar-row>
+    </mat-toolbar>
