test de ambiente

--- a/front/src/app/components/template/header/header.component.html
+++ b/front/src/app/components/template/header/header.component.html
@@ -3,40 +3,15 @@
         <span><img class="icon" src="../../../../assets/logo.8JhZGHQ.png"></span>
         <span class="titulo">Conexão Play Hard</span>
         <span class="spacer"></span>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <button  class="botoesDireita" mat-button> 1 </button>
-        <!-- <button  class="botoesDireita" mat-button> Forum </button>
-        <button  class="botoesDireita" mat-button> Uploader </button>
-        <button  class="botoesDireita" mat-button> facebook </button>
-        <button  class="botoesDireita" mat-button> yt </button>
-        <button  class="botoesDireita" mat-button> instagram </button>
-        <button class="botoesDireita" mat-button> twitter </button>
-        <button  class="botoesDireita" mat-button> twitch </button>
-        <button  class="botoesDireita" mat-button> twitch </button>
-        <button  class="botoesDireita" mat-button> discord </button> 
-        login
-        dentro do menu
-        loja
-        corporação
-        fação
-        --> 
-        
+
+  
+        <button  class="botoesDireita" mat-button> Facebook </button>
+        <button  class="botoesDireita" mat-button> YouTube </button>
+        <button  class="botoesDireita" mat-button> Instagram </button>
+        <button class="botoesDireita" mat-button> Twitter </button>
+        <button  class="botoesDireita" mat-button> Twitch </button>
+        <button  class="botoesDireita" mat-button> Discord </button> 
+    
         <button mat-icon-button [mat-menu-trigger-for]="menu" ><mat-icon>more_vert </mat-icon></button>
         <mat-menu #menu="matMenu">
             <button mat-menu-item>
