--- a/front/src/app/components/template/header/header.component.scss
+++ b/front/src/app/components/template/header/header.component.scss
@@ -8,8 +8,16 @@
     font-size: 1em;
     font-family: "Bungee";
   }
-  .icon {
-    max-height: 78px;
+  .iconimg {
+    max-height: 60px;
+    padding-top: 5px;
+    margin-left: 15px;
+    margin-right: 25px;
+  }
+  .icone {
+    margin-left: 15px;
+    padding: 5px;
+    font-size: 25px;
   }
   .titulo {
     font-size: 1.5em;
