create footer + encaixa do background img + routerlink home

--- a/front/src/app/components/template/header/header.component.html
+++ b/front/src/app/components/template/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color='primary'>
     <mat-toolbar-row class="header">
 <!-- home page button-->
-        <a>
+        <a routerLink=''>
         <mat-icon class="icone">  home </mat-icon>
         <span class="titulo">Inicio</span>
         </a>
