--- a/front/src/app/components/template/header/header.component.scss
+++ b/front/src/app/components/template/header/header.component.scss
@@ -3,19 +3,19 @@
   background-color: #ffa800;
   color: white;
   justify-content: space-around;
-  .spacer {
-    flex: 1 1 auto;
-  }
+  // .spacer {
+  //   flex: 1 1 auto;
+  // }
   .botoesDireita {
     font-size: 1em;
     font-family: "Bungee";
   }
-  .iconimg {
-    max-height: 60px;
-    padding-top: 5px;
-    margin-left: 15px;
-    margin-right: 25px;
-  }
+  // .iconimg {
+  //   max-height: 60px;
+  //   padding-top: 5px;
+  //   margin-left: 15px;
+  //   margin-right: 25px;
+  // }
   a {
     color: white;
     text-decoration: none;
@@ -23,9 +23,10 @@
   .icone {
     color: white;
     margin-left: 15px;
-    padding: 5px;
-    font-size: 25px;
-    align-items: center;
+    padding-top: 5px;
+    // font-size: 25px;
+    font-size: 1.2em;
+    // align-items: center;
   }
   .titulo {
     font-size: 1.2em;
@@ -33,7 +34,7 @@
     font-family: "Arial";
     font-weight: 300;
     margin-left: 5px;
-    align-items: center;
-    text-transform: uppercase;
+    // align-items: center;
+    // text-transform: uppercase;
   }
 }
