--- a/front/src/app/components/template/footer/footer.component.scss
+++ b/front/src/app/components/template/footer/footer.component.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   background-color: #a9a9a9;
+  background-color: rgb(54, 58, 64, 225);
   span {
     font-weight: 300;
     padding-top: 10px;
