ajuste background + estrutura do html home comp

--- a/front/src/app/components/views/home/home.component.html
+++ b/front/src/app/components/views/home/home.component.html
@@ -1,2 +1,18 @@
 <div class="home">
+    <div class="wrap">
+        <div>
+
+        </div>
+
+        <div>
+
+        </div>
+
+
+        <div>
+            
+        </div>
+    </div>
 </div>
+
+
