--- a/front/src/app/components/views/home/home.component.scss
+++ b/front/src/app/components/views/home/home.component.scss
@@ -1,7 +1,8 @@
 .home {
   position: relative;
   // width: 100vh;
-  height: 93vh;
+  // height: 93vh;
+  height: 90vh;
   background-image: url("../../../../assets/LOGIN.png");
   background-size: cover;
   background-repeat: none;
