Alinhando icone com texto no header

--- a/front/src/app/components/template/header/header.component.html
+++ b/front/src/app/components/template/header/header.component.html
@@ -18,12 +18,14 @@
         </a>
 <div>
 <!-- facebook button -->
-        <a > <span class="icone">  <fa-icon [icon]="faFacebook"></fa-icon></span>
+        <a> 
+            <span class="icone">  <fa-icon [icon]="faFacebook"></fa-icon></span> 
             <!-- <span class="titulo">Facebook</span> -->
         </a>
 
-<!-- twitter button -->
-        <a>  <span class="icone">   
+<!-- twitter button --> 
+        <a>  
+            <span class="icone">
             <fa-icon [icon]="faTwitter"></fa-icon></span>
             <!-- <span class="titulo">Twitter</span> -->
         </a>
@@ -41,7 +43,7 @@
         </a>
 
 <!-- twitch tv button -->
-        <a>  
+        <a>
            <span class="icone">  <fa-icon [icon]="faTwitch"></fa-icon></span>
            <!-- <span class="titulo">Twitch Tv</span> -->
         </a>
