--- a/front/src/app/components/template/header/header.component.scss
+++ b/front/src/app/components/template/header/header.component.scss
@@ -25,7 +25,9 @@
     margin-left: 15px;
     padding-top: 5px;
     // font-size: 25px;
-    font-size: 1.2em;
+    font-size: 1.9rem;
+    vertical-align: -5px;
+    padding-right: 3px;
     // align-items: center;
   }
   .titulo {
@@ -35,6 +37,6 @@
     font-weight: 300;
     margin-left: 5px;
     // align-items: center;
-    // text-transform: uppercase;
+    text-transform: uppercase;
   }
 }
