criação da divisão das tela + primeira tela quase finalizada

--- a/front/src/app/components/views/home/home.component.html
+++ b/front/src/app/components/views/home/home.component.html
@@ -1,16 +1,23 @@
 <div class="home">
     <div class="wrap">
-        <div>
-
+        <div class="elemento1">
+            <img class="imgElemento1" src="../../../../assets/logo.png">
+            <p class="textoElemento1">Faça &nbsp;agora &nbsp;o  </p>
+            <p class="textoElemento1">seu  &nbsp;<span class="palavraEspecial">cadastro</span> &nbsp;</p>
+            <button mat-raised-button class="botaoCadastrar"> <mat-icon class="icone">face</mat-icon> Registrar</button>
         </div>
 
-        <div>
-
+        <div class="elemento2">
+            <img class="imgElemento1" src="../../../../assets/logo.png">
+            <p class="textoElemento1">Faça agora o seu cadastro</p>
+            <button mat-raised-button > <mat-icon class="icone">face</mat-icon> Registrar</button>
         </div>
 
 
-        <div>
-            
+        <div class="elemento3">
+            <img class="imgElemento1" src="../../../../assets/logo.png">
+            <p class="textoElemento1">Faça agora o seu cadastro</p>
+            <button mat-raised-button> <mat-icon class="icone">face</mat-icon> Registrar</button>
         </div>
     </div>
 </div>
