adicionando router para components do header

--- a/front/src/app/components/template/header/header.component.html
+++ b/front/src/app/components/template/header/header.component.html
@@ -2,19 +2,19 @@
     <mat-toolbar-row class="header">
 <!-- home page button-->
         <a routerLink=''>
-        <mat-icon class="icone">  home </mat-icon>
-        <span class="titulo">Inicio</span>
+            <mat-icon class="icone">  home </mat-icon>
+            <span class="titulo">Inicio</span>
         </a>
 
 <!-- entretenimento page button -->
-    <a>
-        <mat-icon class="icone">   local_fire_department</mat-icon>
-        <span class="titulo">Entretenimento</span>
-    </a>
+        <a routerLink='entretenimento'>
+            <mat-icon class="icone">   local_fire_department</mat-icon>
+            <span class="titulo">Entretenimento</span>
+        </a>
 <!-- promoções page button -->
-        <a>
-        <mat-icon class="icone">  loyalty </mat-icon>
-        <span class="titulo">Promoções</span>
+        <a routerLink='promocoes'>
+            <mat-icon class="icone">  loyalty </mat-icon>
+            <span class="titulo">Promoções</span>
         </a>
 <div>
 <!-- facebook button -->
@@ -65,11 +65,11 @@
 <!-- Cadastrar / logar button -->
     <div>
         <mat-icon class="icone">face</mat-icon>
-    <a>
+    <a routerLink='cadastrar'>
         <span class="titulo">Cadastrar</span>
     </a>
         <span class="titulo">/</span>
-    <a>
+    <a routerLink='entrar'>
         <span class="titulo">Entrar</span>
     </a>
     </div>
