Add img + foto e color footer + criação do home baseado no  design

--- a/front/src/app/components/template/footer/footer.component.html
+++ b/front/src/app/components/template/footer/footer.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar class="footer">
+  <img src="../../../../assets/logo.png">
     <span>
       <p class="copyright" >Copyright © 2021 Conexão Play Hard. All rights reserved.</p>
     </span>
