--- a/front/src/app/components/template/footer/footer.component.scss
+++ b/front/src/app/components/template/footer/footer.component.scss
@@ -10,7 +10,12 @@
     font-weight: 300;
     padding-top: 10px;
     font-size: 1rem;
-    color: white;
+    color: rgb(200, 200, 200);
     font-family: "Arial";
+  }
+  img {
+    height: 60px;
+    margin-right: 5px;
+    vertical-align: 8px;
   }
 }
