--- a/front/src/app/components/views/home/home.component.html
+++ b/front/src/app/components/views/home/home.component.html
@@ -1,24 +1,25 @@
 <div class="home">
     <div class="wrap">
         <div class="elemento1">
-            <img class="imgElemento1" src="../../../../assets/logo.png">
+            <div>
+            <img class="imgElemento1" src="../../../../assets/logo4.png">
             <p class="textoElemento1">Faça &nbsp;agora &nbsp;o  </p>
             <p class="textoElemento1">seu  &nbsp;<span class="palavraEspecial">cadastro</span> &nbsp;</p>
-            <button mat-raised-button class="botaoCadastrar"> <mat-icon class="icone">face</mat-icon> Registrar</button>
-
+            <button mat-raised-button routerLink="cadastrar" class="botaoCadastrar"> <mat-icon class="icone">face</mat-icon> Cadastrar</button>
+        </div>
+        <div>
+            <img class="imgElemento2" src="../../../../assets/imagemHome.png">
+        </div>   
         </div>
 
-        <div class="elemento2">
-            <img class="imgElemento1" src="../../../../assets/logo.png">
-            <p class="textoElemento1">Faça agora o seu cadastro</p>
-            <button mat-raised-button > <mat-icon class="icone">face</mat-icon> Registrar</button>
-        </div>
 
 
         <div class="elemento3">
-            <img class="imgElemento1" src="../../../../assets/logo.png">
-            <p class="textoElemento1">Faça agora o seu cadastro</p>
-            <button mat-raised-button> <mat-icon class="icone">face</mat-icon> Registrar</button>
+            <h1>Compre seu</h1>
+            <h3>Vips, Coins, Facções ou Corporações</h3>
+            <!-- <img class="imgElemento3" src="../../../../assets/logo.png">
+            <p class="textoElemento3">Faça agora o seu cadastro</p>
+            <button mat-raised-button> <mat-icon class="icone">face</mat-icon> Registrar</button> -->
         </div>
     </div>
 </div>
