colocando redes sociais no footer e realocando botões no header

--- a/front/src/app/components/template/footer/footer.component.html
+++ b/front/src/app/components/template/footer/footer.component.html
@@ -3,4 +3,38 @@
     <span>
       <p class="copyright" >Copyright © 2021 Conexão Play Hard. All rights reserved.</p>
     </span>
+
+    <div>
+      <!-- facebook button -->
+              <a> 
+                  <span class="icone">  <fa-icon [icon]="faFacebook"></fa-icon></span> 
+              </a>
+      
+      <!-- twitter button --> 
+              <a>  
+                  <span class="icone">
+                  <fa-icon [icon]="faTwitter"></fa-icon></span>
+              </a>
+      <!-- instagram button -->
+              <a href="https://www.instagram.com/conexao_ph/" target="_blank">  
+                  <span class="icone">  <fa-icon [icon]="faInstagram"></fa-icon></span>    
+              </a>
+      
+      
+      <!-- youtube button -->
+              <a href="https://www.youtube.com/channel/UC-RKHNvRm-nEIFTu6O3eM1Q" target="_blank">  
+                  <span class="icone">  <fa-icon [icon]="faYoutube"></fa-icon></span>
+              </a>
+      
+      <!-- twitch tv button -->
+              <a>
+                 <span class="icone">  <fa-icon [icon]="faTwitch"></fa-icon></span>
+              </a>
+      
+      <!-- discord button -->
+              <a href="https://discord.com/invite/UBaSGJTB" target="_blank">
+                <span class="icone">  <fa-icon [icon]="faDiscord"></fa-icon></span>
+              </a>
+          </div>
+
   </mat-toolbar>
