--- a/front/src/app/components/template/header/header.component.html
+++ b/front/src/app/components/template/header/header.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color='primary'>
     <mat-toolbar-row class="header">
+        
 <!-- home page button-->
         <a routerLink=''>
             <mat-icon class="icone">  home </mat-icon>
@@ -16,51 +17,13 @@
             <mat-icon class="icone">  loyalty </mat-icon>
             <span class="titulo">Promoções</span>
         </a>
-<div>
-<!-- facebook button -->
-        <a> 
-            <span class="icone">  <fa-icon [icon]="faFacebook"></fa-icon></span> 
-            <!-- <span class="titulo">Facebook</span> -->
-        </a>
 
-<!-- twitter button --> 
-        <a>  
-            <span class="icone">
-            <fa-icon [icon]="faTwitter"></fa-icon></span>
-            <!-- <span class="titulo">Twitter</span> -->
-        </a>
-<!-- instagram button -->
-        <a href="https://www.instagram.com/conexao_ph/" target="_blank">  
-            <span class="icone">  <fa-icon [icon]="faInstagram"></fa-icon></span>
-            <!-- <span class="titulo">Instagram</span> -->
-        </a>
-
-
-<!-- youtube button -->
-        <a href="https://www.youtube.com/channel/UC-RKHNvRm-nEIFTu6O3eM1Q" target="_blank">  
-            <span class="icone">  <fa-icon [icon]="faYoutube"></fa-icon></span>
-            <!-- <span class="titulo">Youtube</span> -->
-        </a>
-
-<!-- twitch tv button -->
-        <a>
-           <span class="icone">  <fa-icon [icon]="faTwitch"></fa-icon></span>
-           <!-- <span class="titulo">Twitch Tv</span> -->
-        </a>
-
-<!-- discord button -->
-        <a href="https://discord.com/invite/UBaSGJTB" target="_blank">
-          <span class="icone">  <fa-icon [icon]="faDiscord"></fa-icon></span>
-          <!-- <span class="titulo">Discord</span> -->
-        </a>
-    </div>
 <!-- suporte button -->
     <a>
         <mat-icon class="icone"> support_agent</mat-icon>
         <span class="titulo">Suporte</span>
     </a>
 
-        <!-- <span class="spacer"></span> -->
     
 <!-- Cadastrar / logar button -->
     <div>
@@ -72,30 +35,27 @@
     <a routerLink='entrar'>
         <span class="titulo">Entrar</span>
     </a>
-    </div>
- 
-  
 
+    <button mat-icon-button [mat-menu-trigger-for]="menu" ><mat-icon class="icone">more_vert </mat-icon></button>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item>
+            <mat-icon>dialpad</mat-icon>
+            <span>teste 1</span>
+        </button>
 
+        <button mat-menu-item>
+            <mat-icon>voicemail</mat-icon>
+            <span>teste 2</span>
+        </button>
 
-        
-        <button mat-icon-button [mat-menu-trigger-for]="menu" ><mat-icon>more_vert </mat-icon></button>
-        <mat-menu #menu="matMenu">
-            <button mat-menu-item>
-                <mat-icon>dialpad</mat-icon>
-                <span>teste 1</span>
-            </button>
-    
-            <button mat-menu-item>
-                <mat-icon>voicemail</mat-icon>
-                <span>teste 2</span>
-            </button>
-    
-            <button mat-menu-item>
-                <mat-icon>notifications_off</mat-icon>
-                <span>teste 3</span>
-            </button>
-        </mat-menu>
+        <button mat-menu-item>
+            <mat-icon>notifications_off</mat-icon>
+            <span>teste 3</span>
+        </button>
+    </mat-menu>
+
+    </div>    
+
     </mat-toolbar-row>
     </mat-toolbar>
     <router-outlet></router-outlet>
