--- a/front/src/app/components/template/footer/footer.component.scss
+++ b/front/src/app/components/template/footer/footer.component.scss
@@ -18,4 +18,15 @@
     margin-right: 5px;
     vertical-align: 8px;
   }
+
+  .icone {
+    color: white;
+    margin-left: 15px;
+    padding-top: 5px;
+    // font-size: 25px;
+    font-size: 1.5rem;
+    vertical-align: -5px;
+    padding-right: 3px;
+    // align-items: center;
+  }
 }
