--- a/front/src/app/components/template/footer/footer.component.html
+++ b/front/src/app/components/template/footer/footer.component.html
@@ -6,7 +6,7 @@
 
     <div>
       <!-- facebook button -->
-              <a> 
+              <a href="https://www.facebook.com/conexaoplayhard/" target="_blank"> 
                   <span class="icone">  <fa-icon [icon]="faFacebook"></fa-icon></span> 
               </a>
       
