--- a/front/src/app/components/views/home/home.component.html
+++ b/front/src/app/components/views/home/home.component.html
@@ -6,17 +6,48 @@
             <p class="texto1">Faça &nbsp;agora &nbsp;o  </p>
             <p class="texto1">seu  &nbsp;<span class="palavraEspecial">cadastro</span> &nbsp;</p>
             <button mat-raised-button routerLink="cadastrar" class="botaoCadastrar"> <mat-icon class="icone">face</mat-icon> Cadastrar</button>
-        </div>
+            </div>
+
             <div>
             <img class="img2tela" src="../../../../assets/imagemHome.png">
-        </div>
-        </div>
-      
-        <!-- <div class="elemento3">
+            </div>
+
+            <div>
             <h1>Compre seu</h1>
             <h3>Vips, Coins, Facções ou Corporações</h3>
-        </div>  -->
+            <div class="compras">
+                <div>
+            <img class="imgcompra0" src="../../../../assets/v.png">
+            <h2 class="textocompra0">Vips</h2>
+            <button mat-raised-button routerLink="promocoes" class="botaocompra0">Compre</button>
+                </div>
+
+            <div>
+            <img class="imgcompra1" src="../../../../assets/c.png">
+            <h2 class="textocompra1">Coins</h2>
+            <button mat-raised-button routerLink="promocoes" class="botaocompra1">Compre</button>
+                 </div> 
+
+            <div>
+            <img class="imgcompra1" src="../../../../assets/f.png">
+            <h2 class="textocompra2">Fac</h2>
+            <button mat-raised-button routerLink="promocoes" class="botaocompra1">Compre</button>
+                    </div>  
+
+            <div>
+            <img class="imgcompra1" src="../../../../assets/c.png">
+            <h2 class="textocompra3">Corp</h2>
+            <button mat-raised-button routerLink="promocoes" class="botaocompra1">Compre</button>
+                    </div>  
+
+        </div>
+            </div>
+            <div>
+                
+            </div>
+        </div>
     </div>
 </div>
+
 
 
