--- a/front/src/app/components/views/home/home.component.scss
+++ b/front/src/app/components/views/home/home.component.scss
@@ -59,6 +59,8 @@
             vertical-align: -5px;
           }
         }
+
+        // 3 parte
         h1 {
           color: white;
           margin-top: 50px;
@@ -166,7 +168,7 @@
       margin-top: 9%;
       .img1tela {
         height: 300px;
-        margin-left: 23%;
+        margin-left: 10%;
       }
       .img2tela {
         margin-top: 15px;
@@ -178,7 +180,7 @@
         font-size: 2em;
         font-weight: 700;
         margin-top: 1%;
-        margin-left: 115px;
+        margin-left: 70px;
         text-transform: uppercase;
         color: white;
         .palavraEspecial {
@@ -189,7 +191,7 @@
         height: 80px;
         width: 250px;
         margin-top: 15px;
-        margin-left: 105px;
+        margin-left: 63px;
         background-color: #ffa800;
         color: white;
         font-family: "Arial";
@@ -205,6 +207,106 @@
           vertical-align: -5px;
         }
       }
+
+        // 3 Parte
+        h1 {
+          color: white;
+          margin-top: 50px;
+          margin-left: 150px;
+          font-weight: 600;
+          font-size: 4.3em;
+          font-family: "Arial";
+          text-transform: uppercase;
+        }
+
+        h3 {
+          color: #7b7d7c;
+          margin-left: 150px;
+          font-size: 2em;
+          font-weight: 600;
+          font-family: "Arial";
+          text-transform: uppercase;
+        }
+
+        //parte de comprar
+
+        .compras {
+          display: flex;
+          .textocompra0 {
+            color: white;
+            margin-left: 102px;
+            margin-top: 5px;
+            font-size: 2.5em;
+            font-weight: 600;
+            font-family: "Arial";
+            text-transform: uppercase;
+          }
+          .textocompra1 {
+            color: white;
+            margin-left: 24px;
+            margin-top: 5px;
+            font-size: 2.5em;
+            font-weight: 600;
+            font-family: "Arial";
+            text-transform: uppercase;
+          }
+          .textocompra2 {
+            color: white;
+            margin-left: 65px;
+            margin-top: 5px;
+            font-size: 2.5em;
+            font-weight: 600;
+            font-family: "Arial";
+            text-transform: uppercase;
+          }
+          .textocompra3 {
+            color: white;
+            margin-left: 55px;
+            margin-top: 5px;
+            font-size: 2.5em;
+            font-weight: 600;
+            font-family: "Arial";
+            text-transform: uppercase;
+          }
+          .botaocompra0 {
+            height: 50px;
+            width: 130px;
+            margin-top: 5px;
+            margin-left: 77px;
+            background-color: #ffa800;
+            color: white;
+            font-family: "Arial";
+            font-size: 1.5em;
+            font-weight: 300;
+            text-transform: uppercase;
+            border-radius: 15px;
+            border-style: 1px solid #ffa800;
+          }
+          .botaocompra1 {
+            height: 50px;
+            width: 130px;
+            margin-top: 5px;
+            margin-left: 20px;
+            background-color: #ffa800;
+            color: white;
+            font-family: "Arial";
+            font-size: 1.5em;
+            font-weight: 300;
+            text-transform: uppercase;
+            border-radius: 15px;
+            border-style: 1px solid #ffa800;
+          }
+          .imgcompra0 {
+            margin-top: 60px;
+            margin-left: 80px;
+            height: 120px;
+          }
+          .imgcompra1 {
+            margin-top: 60px;
+            margin-left: 20px;
+            height: 120px;
+          }
+        }
     }
   }
 
