--- a/front/src/app/components/views/home/home.component.scss
+++ b/front/src/app/components/views/home/home.component.scss
@@ -205,6 +205,24 @@
           vertical-align: -5px;
         }
       }
+      h1 {
+        color: white;
+        margin-top: 50px;
+        margin-left: 150px;
+        font-weight: 600;
+        font-size: 5.5em;
+        font-family: "Arial";
+        text-transform: uppercase;
+      }
+
+      h3 {
+        color: #7b7d7c;
+        margin-left: 150px;
+        font-size: 2em;
+        font-weight: 600;
+        font-family: "Arial";
+        text-transform: uppercase;
+      }
     }
   }
 
