finalização da tela 1440

--- a/front/src/app/components/views/home/home.component.html
+++ b/front/src/app/components/views/home/home.component.html
@@ -13,6 +13,7 @@
             </div>
 
             <div>
+            <!-- <img src="../../../../assets/barraLaranja.png"> -->
             <h1>Compre seu</h1>
             <h3>Vips, Coins, Facções ou Corporações</h3>
             <div class="compras">
