Criando tela de cadastrar

--- a/front/src/app/components/views/cadastrar/cadastrar.component.html
+++ b/front/src/app/components/views/cadastrar/cadastrar.component.html
@@ -1,1 +1,15 @@
-<p>cadastrar works!</p>
+<div class ="cadastrar">
+    <div class='wrap'>  
+        <mat-card class="login">
+            <mat-card-header>
+              <mat-card-title class="loginTitulo">Cadastrar</mat-card-title>
+            </mat-card-header>
+            
+            
+            <mat-card-actions>
+              <button mat-button>REGISTRAR</button>
+              <button mat-button>CANCELAR</button>
+            </mat-card-actions>
+          </mat-card>
+    </div>
+</div>
