--- a/front/src/app/components/template/header/header.component.html
+++ b/front/src/app/components/template/header/header.component.html
@@ -19,7 +19,7 @@
         </a>
 
 <!-- suporte button -->
-    <a>
+    <a href="https://discord.gg/4TVqfZgdq5">
         <mat-icon class="icone"> support_agent</mat-icon>
         <span class="titulo">Suporte</span>
     </a>
